--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "jest": {
     "coveragePathIgnorePatterns": [
+      "./src/hooks/useFetch.ts",
       "./src/reportWebVitals.ts",
       "./src/App.tsx",
       "./src/index.tsx",
