--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,7 @@
     "prettier"
   ],
   "rules": {
+    "@typescript-eslint/no-explicit-any": "off",
     "prettier/prettier": "error",
     "import/prefer-default-export": "off",
     "react/function-component-definition": [
